# aws-signing-helper

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  workspace_status.sh
.github/workflows/: build-push.yml
aws_signing_helper/: BUILD.bazel
cmd/: BUILD.bazel
internal/auth/: BUILD.bazel
internal/auth/smithy/: BUILD.bazel
internal/configsources/: BUILD.bazel
internal/context/: BUILD.bazel
internal/endpoints/: BUILD.bazel
internal/endpoints/awsrulesfn/: BUILD.bazel
internal/endpoints/v2/: BUILD.bazel
internal/middleware/: BUILD.bazel
internal/sdk/: BUILD.bazel
rolesanywhere/: BUILD.bazel
rolesanywhere/internal/endpoints/: BUILD.bazel
rolesanywhere/types/: BUILD.bazel
