load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_img//img:image.bzl", "image_from_binary")
load("@rules_img//img:push.bzl", "image_push")

# gazelle:prefix github.com/aws/rolesanywhere-credential-helper
# gazelle:go_naming_convention import_alias

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

gazelle_binary(
    name = "gazelle_bin",
    languages = ["@gazelle//language/go"],
)

# ── Binary ─────────────────────────────────────────────────────────────────
# Cross-compiled amd64 → arm64 via hermetic zig CC (glibc 2.28 target).
# CGO is required: miekg/pkcs11 uses cgo + -ldl (standard glibc).
# Version injected at link time via x_defs (equivalent to -ldflags -X).
go_binary(
    name = "aws_signing_helper",
    embed = [":rolesanywhere-credential-helper_lib"],
    pure = "off",
    visibility = ["//visibility:public"],
    x_defs = {
        "github.com/aws/rolesanywhere-credential-helper/cmd.Version": "v1.8.4",
    },
)

go_library(
    name = "rolesanywhere-credential-helper_lib",
    srcs = ["main.go"],
    importpath = "github.com/aws/rolesanywhere-credential-helper",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

# ── OCI Image ──────────────────────────────────────────────────────────────
# Base: debian:12-slim arm64 — provides glibc 2.36, ca-certificates, libdl.
# The binary only needs glibc's libdl at runtime (miekg/pkcs11 uses -ldl).
# No libltdl runtime dep required — that is only a test-infra concern.
# Binary placed at /usr/local/bin/aws_signing_helper (path = "/usr/local/bin/").
# Runs as uid 65532 (nonroot, matching distroless convention).
image_from_binary(
    name = "image",
    binary = ":aws_signing_helper",
    base = "@debian12_slim_arm64",
    path = "/usr/local/bin/",
    user = "65532",
    visibility = ["//visibility:public"],
)

# Push :latest tag — used in CI via `bazel run --config=ci //:push`
image_push(
    name = "push",
    image = ":image",
    registry = "ghcr.io",
    repository = "bpalermo/aws-signing-helper",
    tag = "latest",
    visibility = ["//visibility:public"],
)

# Push with git-commit SHA tag.
# stamp="force" makes this always expand workspace status even without --stamp.
# GIT_COMMIT_SHORT is populated by workspace_status.sh (set via --workspace_status_command).
# The CI workflow adds --workspace_status_command=./workspace_status.sh for this target.
image_push(
    name = "push_sha",
    image = ":image",
    registry = "ghcr.io",
    repository = "bpalermo/aws-signing-helper",
    tag = "sha-{{.GIT_COMMIT_SHORT}}",
    stamp = "force",
    visibility = ["//visibility:public"],
)
