load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "auth",
    srcs = ["auth.go"],
    importpath = "github.com/aws/rolesanywhere-credential-helper/internal/auth",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_aws_smithy_go//auth",
        "@com_github_aws_smithy_go//transport/http",
    ],
)

alias(
    name = "go_default_library",
    actual = ":auth",
    visibility = ["//:__subpackages__"],
)
