load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "configsources",
    srcs = [
        "config.go",
        "endpoints.go",
    ],
    importpath = "github.com/aws/rolesanywhere-credential-helper/internal/configsources",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_aws_aws_sdk_go_v2//aws"],
)

alias(
    name = "go_default_library",
    actual = ":configsources",
    visibility = ["//:__subpackages__"],
)
