load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "sdk",
    srcs = ["time.go"],
    importpath = "github.com/aws/rolesanywhere-credential-helper/internal/sdk",
    visibility = ["//:__subpackages__"],
)

alias(
    name = "go_default_library",
    actual = ":sdk",
    visibility = ["//:__subpackages__"],
)
