load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "types",
    srcs = [
        "enums.go",
        "errors.go",
        "types.go",
    ],
    importpath = "github.com/aws/rolesanywhere-credential-helper/rolesanywhere/types",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_aws_smithy_go//:smithy-go",
        "@com_github_aws_smithy_go//document",
    ],
)

alias(
    name = "go_default_library",
    actual = ":types",
    visibility = ["//visibility:public"],
)
